// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HierarchicalTrackSelector drawer widget renders with a couple of categorized tracks 1`] = `
<div
  className="HierarchicalTrackSelector-root-1"
  data-testid="hierarchical_track_selector"
>
  <div
    className="MuiFormControl-root-5 MuiFormControl-fullWidth-8 HierarchicalTrackSelector-searchBox-2"
  >
    <label
      className="MuiFormLabel-root-20 MuiInputLabel-root-9 MuiInputLabel-formControl-14 MuiInputLabel-animated-17 MuiInputLabel-shrink-16"
      data-shrink={true}
    >
      Filter Tracks
    </label>
    <div
      className="MuiInputBase-root-40 MuiInput-root-27 MuiInput-underline-31 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-41 MuiInput-formControl-28 MuiInputBase-adornedStart-44 MuiInputBase-adornedEnd-45"
      onClick={[Function]}
    >
      <div
        className="MuiInputAdornment-root-57 MuiInputAdornment-positionStart-59"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-62"
        >
          search
        </span>
      </div>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-50 MuiInput-input-35 MuiInputBase-inputAdornedStart-55 MuiInputBase-inputAdornedEnd-56"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <div
        className="MuiInputAdornment-root-57 MuiInputAdornment-positionEnd-60"
      >
        <button
          className="MuiButtonBase-root-77 MuiIconButton-root-71"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-76"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-62"
            >
              clear
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-110"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    className="MuiFormGroup-root-89"
  />
  <hr
    className="MuiDivider-root-91 Contents-divider-88"
  />
  <div
    className="MuiFormGroup-root-89"
  />
  <div
    className="MuiCircularProgress-root-117 MuiCircularProgress-colorPrimary-120 MuiCircularProgress-indeterminate-119"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-122"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-123 MuiCircularProgress-circleIndeterminate-125"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
  <button
    className="MuiButtonBase-root-77 MuiFab-root-96 MuiFab-secondary-99 HierarchicalTrackSelector-fab-3"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiFab-label-97"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-62"
      >
        add
      </span>
    </span>
    <span
      className="MuiTouchRipple-root-110"
    />
  </button>
</div>
`;

exports[`HierarchicalTrackSelector drawer widget renders with a couple of uncategorized tracks 1`] = `
<div
  className="HierarchicalTrackSelector-root-1"
  data-testid="hierarchical_track_selector"
>
  <div
    className="MuiFormControl-root-5 MuiFormControl-fullWidth-8 HierarchicalTrackSelector-searchBox-2"
  >
    <label
      className="MuiFormLabel-root-20 MuiInputLabel-root-9 MuiInputLabel-formControl-14 MuiInputLabel-animated-17 MuiInputLabel-shrink-16"
      data-shrink={true}
    >
      Filter Tracks
    </label>
    <div
      className="MuiInputBase-root-40 MuiInput-root-27 MuiInput-underline-31 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-41 MuiInput-formControl-28 MuiInputBase-adornedStart-44 MuiInputBase-adornedEnd-45"
      onClick={[Function]}
    >
      <div
        className="MuiInputAdornment-root-57 MuiInputAdornment-positionStart-59"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-62"
        >
          search
        </span>
      </div>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-50 MuiInput-input-35 MuiInputBase-inputAdornedStart-55 MuiInputBase-inputAdornedEnd-56"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <div
        className="MuiInputAdornment-root-57 MuiInputAdornment-positionEnd-60"
      >
        <button
          className="MuiButtonBase-root-77 MuiIconButton-root-71"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-76"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-62"
            >
              clear
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-110"
          />
        </button>
      </div>
    </div>
    
  </div>
  <div
    className="MuiFormGroup-root-89"
  />
  <hr
    className="MuiDivider-root-91 Contents-divider-88"
  />
  <div
    className="MuiFormGroup-root-89"
  />
  <div
    className="MuiCircularProgress-root-117 MuiCircularProgress-colorPrimary-120 MuiCircularProgress-indeterminate-119"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg-122"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle-123 MuiCircularProgress-circleIndeterminate-125"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </div>
  <button
    className="MuiButtonBase-root-77 MuiFab-root-96 MuiFab-secondary-99 HierarchicalTrackSelector-fab-3"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiFab-label-97"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-62"
      >
        add
      </span>
    </span>
    <span
      className="MuiTouchRipple-root-110"
    />
  </button>
</div>
`;

exports[`HierarchicalTrackSelector drawer widget renders with just the required model elements 1`] = `
<div
  className="HierarchicalTrackSelector-root-1"
  data-testid="hierarchical_track_selector"
>
  <div
    className="MuiFormControl-root-5 MuiFormControl-fullWidth-8 HierarchicalTrackSelector-searchBox-2"
  >
    <label
      className="MuiFormLabel-root-20 MuiFormLabel-error-23 MuiInputLabel-error-12 MuiInputLabel-root-9 MuiInputLabel-formControl-14 MuiInputLabel-animated-17 MuiInputLabel-shrink-16"
      data-shrink={true}
    >
      Filter Tracks
    </label>
    <div
      className="MuiInputBase-root-40 MuiInput-root-27 MuiInput-underline-31 MuiInputBase-error-46 MuiInput-error-32 MuiInputBase-fullWidth-49 MuiInput-fullWidth-34 MuiInputBase-formControl-41 MuiInput-formControl-28 MuiInputBase-adornedStart-44 MuiInputBase-adornedEnd-45"
      onClick={[Function]}
    >
      <div
        className="MuiInputAdornment-root-57 MuiInputAdornment-positionStart-59"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-62"
        >
          search
        </span>
      </div>
      <input
        aria-invalid={true}
        className="MuiInputBase-input-50 MuiInput-input-35 MuiInputBase-inputAdornedStart-55 MuiInputBase-inputAdornedEnd-56"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value=""
      />
      <div
        className="MuiInputAdornment-root-57 MuiInputAdornment-positionEnd-60"
      >
        <button
          className="MuiButtonBase-root-77 MuiIconButton-root-71"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiIconButton-label-76"
          >
            <span
              aria-hidden="true"
              className="material-icons MuiIcon-root-62"
            >
              clear
            </span>
          </span>
          <span
            className="MuiTouchRipple-root-110"
          />
        </button>
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-80 MuiFormHelperText-error-81"
    >
      No matches
    </p>
  </div>
  <div
    className="MuiFormGroup-root-89"
  />
  <hr
    className="MuiDivider-root-91 Contents-divider-88"
  />
  <div
    className="MuiFormGroup-root-89"
  />
  <button
    className="MuiButtonBase-root-77 MuiFab-root-96 MuiFab-secondary-99 HierarchicalTrackSelector-fab-3"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiFab-label-97"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-62"
      >
        add
      </span>
    </span>
    <span
      className="MuiTouchRipple-root-110"
    />
  </button>
</div>
`;
